# infe

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-tests.yml
src/infe/: __init__.py  arrays.py  basic.py  core.py  digits.py  primes.py  special.py  strings.py  utils.py
tests/: test_infe.py
